<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dogCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@color/background_color"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appDetailsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/appImageView"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_content_app_thumbnail"
                android:scaleType="fitCenter"
                android:background="@color/no_image_background_color"
                tools:src="@color/main_variant"/>

            <TextView
                android:id="@+id/appNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appImageView"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center_horizontal"
                android:maxLines="3"
                android:ellipsize="end"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="This is a very very extremely long application name"/>

            <TextView
                android:id="@+id/ratingLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/appNameText"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:text="@string/rating"/>

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ratingLabelTextView"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                tools:text="4.5"/>

            <TextView
                android:id="@+id/downloadsLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ratingTextView"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="16sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:text="@string/downloads"/>

            <TextView
                android:id="@+id/downloadsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/downloadsLabelTextView"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                tools:text="2.88M"/>

            <TextView
                android:id="@+id/sizeLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/downloadsTextView"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="16sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:text="@string/size"/>

            <TextView
                android:id="@+id/sizeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sizeLabelTextView"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                tools:text="10.5 MB"/>

            <TextView
                android:id="@+id/lastUpdateLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sizeTextView"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="16sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:text="@string/last_update"/>

            <TextView
                android:id="@+id/lastUpdateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lastUpdateLabelTextView"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                tools:text="2020-01-20 10:29"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/main"
        android:visibility="gone"/>

</androidx.cardview.widget.CardView>